<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tsjd.HotMeals.MainActivity" >

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:max="1000" 
        android:progress = "1000"/>

    <TextView
        android:id="@+id/budgetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBar1"
        android:layout_below="@+id/seekBar1"
        android:text="€10.00"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timeSeekBar"
        android:layout_below="@+id/timeSeekBar"
        android:text="2h 0m" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/budgetTextView"
        android:layout_below="@+id/budgetTextView"
        android:layout_marginTop="24dp"
        android:text="@string/time_search" />

    <Button
        android:id="@+id/searchButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timeTextView"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/timeSeekBar"
        android:layout_marginBottom="20dp"
        android:text="@string/search" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBar1"
        android:layout_below="@+id/multiAutoCompleteTextView1"
        android:layout_marginTop="24dp"
        android:text="@string/budget_search" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/timeTextView"
        android:ems="10" >

    </EditText>

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/seekBar1"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/ingredients" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/multiAutoCompleteTextView1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:text="@string/ingredients_search" />

    <SeekBar
        android:id="@+id/timeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:max="120"
        android:progress = "120" />

</RelativeLayout>